# regulatory-intelligence

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  mypy.ini
.github/workflows/: ci.yml
docker/: base.Dockerfile
docs/: README.md  guardrails-hitl.md  implementation-roadmap.md  langgraph-workflows.md  mcp-specifications.md  observability-audit.md  prd.md  rag-ingestion-pipeline.md  use-case-01-requirement-solution-validation.md
docs/adrs/: ADR-001-agentic-harness.md
docs/prompts/: agile-agent-prompt.md
docs/schemas/: agent-result.schema.json
infra/: docker-compose.yml
infra/k8s/agents/: agile-master-agent.yaml  developer-agent.yaml  document-analyst.yaml  ingestion.yaml  research-agent.yaml  supervisor.yaml
infra/k8s/base/: configmap.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secrets-template.yaml
infra/k8s/infra/: kafka.yaml  minio.yaml  mongodb.yaml  qdrant.yaml
libs/common/: pyproject.toml
libs/common/medidata_common/: __init__.py  agent_harness.py  audit.py  config.py  contracts.py  logging.py  topics.py
libs/common/medidata_common/messaging/: __init__.py  base.py  factory.py  kafka.py  memory.py
libs/common/tests/: test_contracts.py  test_messaging.py
services/agile_master_agent/: Dockerfile  pyproject.toml
services/agile_master_agent/agile_master_agent/: __init__.py  app.py  graph.py  tools.py
services/agile_master_agent/tests/: test_graph.py
services/developer_agent/: Dockerfile  pyproject.toml
services/developer_agent/developer_agent/: __init__.py  app.py  graph.py  tools.py
services/developer_agent/tests/: test_graph.py
services/document_analyst/: Dockerfile  pyproject.toml
services/document_analyst/document_analyst/: __init__.py  app.py  graph.py  tools.py
services/document_analyst/tests/: test_graph.py
services/ingestion/: Dockerfile  pyproject.toml  pytest.ini
services/ingestion/ingestion/: __init__.py  app.py  pipeline.py  watcher.py
services/ingestion/ingestion/tests/: test_pipeline.py
services/research_agent/: Dockerfile  pyproject.toml
services/research_agent/research_agent/: __init__.py  app.py  graph.py  tools.py
services/research_agent/tests/: test_graph.py
services/supervisor/: Dockerfile  pyproject.toml
services/supervisor/supervisor/: __init__.py  app.py  dispatcher.py  graph.py  guardrails.py  memory.py  model_gateway.py  nodes.py  state.py
services/supervisor/tests/: test_app_smoke.py  test_graph.py  test_guardrails.py  test_model_gateway.py
speckit/: agent-contracts.md  architecture.md  security-compliance-nfr.md  use-case-02-release-validation-compliance-impact.md
speckit/adrs/: ADR-002-kafka-runtime-boundary.md
speckit/prompts/: developer-agent-prompt.md  document-analyst-agent-prompt.md  research-agent-prompt.md  supervisor-prompt.md
speckit/schemas/: requirement.schema.json
