[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-master-agent"
version = "0.1.0"
description = "Agile Master specialist agent — Jira stories, epics, defects and roadmap."
requires-python = ">=3.10"
dependencies = [
    "medidata-common",
    "langgraph>=0.2.30",
    "langchain-core>=0.3",
    "orjson>=3.10",
]

[project.optional-dependencies]
jira = ["httpx>=0.27"]
bedrock = ["langchain-aws>=0.2", "boto3>=1.34"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
agile-master-agent = "agile_master_agent.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agile_master_agent*"]
