[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-analyst"
version = "0.1.0"
description = "Document Analyst specialist agent — RFP/document parsing and requirement extraction."
requires-python = ">=3.10"
dependencies = [
    "medidata-common",
    "langgraph>=0.2.30",
    "langchain-core>=0.3",
    "orjson>=3.10",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34",
    "pypdf>=4.0",
    "python-docx>=1.1",
]
bedrock = ["langchain-aws>=0.2", "boto3>=1.34"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
document-analyst = "document_analyst.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["document_analyst*"]
