[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion"
version = "0.1.0"
description = "RAG ingestion pipeline — S3 → extract → chunk → embed → Qdrant."
requires-python = ">=3.10"
dependencies = [
    "medidata-common",
    "orjson>=3.10",
]

[project.optional-dependencies]
full = [
    "boto3>=1.34",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ingestion = "ingestion.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]
