[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Research specialist agent — RAG/Qdrant semantic search."
requires-python = ">=3.10"
dependencies = [
    "medidata-common",
    "langgraph>=0.2.30",
    "langchain-core>=0.3",
    "orjson>=3.10",
]

[project.optional-dependencies]
qdrant = [
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
]
bedrock = [
    "langchain-aws>=0.2",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
research-agent = "research_agent.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_agent*"]
