[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisor"
version = "0.1.0"
description = "Shared Supervisor harness (LangGraph StateGraph) for the Regulatory Intelligence platform."
requires-python = ">=3.10"
dependencies = [
    "medidata-common",
    "langgraph>=0.2.30",
    "langchain-core>=0.3",
    "orjson>=3.10",
]

[project.optional-dependencies]
# Real model gateway + Mongo checkpointer. Not needed for offline/fake runs.
bedrock = [
    "langchain-aws>=0.2",
    "boto3>=1.34",
]
mongo = [
    "langgraph-checkpoint-mongodb>=0.1",
    "pymongo>=4.7",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
supervisor = "supervisor.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*"]
